--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700%27');
+  src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700');
   font-weight: 500;
 }
 
